syntax = "proto3";

option csharp_namespace = "grpc_hello_world";

service AuthService {
  rpc Authenticate(AuthRequest) returns (AuthResponse);
}

message UserIdentifier {
    oneof key {
        string email = 1;
        string id = 2;
        string username = 3;
    }
}

message AuthRequest {
  UserIdentifier user_id = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}


service UserService {
    rpc CreateUser (UserCreate) returns (UserIdentifier);
    rpc GetUser (UserGet) returns (UserFull);
    rpc UpdateUser (UserUpdate) returns (UserUpdate);  // Only updated fields are returned
    rpc DeleteUser (UserIdentifier) returns (UserIdentifier);
}

message UserUpdate {
    optional UserIdentifier user_id = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string phone = 4;
    optional string pesel = 5;
    // Updating addresses done in a different endpoint
    optional string avatar_url = 6;
    optional string document_url = 7;
    // States
    optional bool is_activated = 8;
    optional bool is_verified = 9;
    optional bool is_banned = 10;
    optional bool is_admin = 11;
}

message UserCreate {
    string email = 1;
    string username = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    AddressCreate primary_address = 6;
    string phone = 7;
    string pesel = 8;
    
    optional string avatar_url = 9;
    repeated string document_url = 10;
}

message UserGet {
    optional UserIdentifier user_id = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string phone = 4;
    optional string pesel = 5;
    // Updating addresses done in a different endpoint
    optional string avatar_url = 6;
    optional string document_url = 7;
    // States
    optional bool is_activated = 8;
    optional bool is_verified = 9;
    optional bool is_banned = 10;
    optional bool is_admin = 11;
}

message UserFull {
    string id = 1;
    string email = 2;
    string username = 3;
    string first_name = 4;
    string last_name = 5;
    string phone = 6;
    string pesel = 7;
    AddressCreate primary_address = 8;
    string avatar_url = 9;
    repeated string document_url = 10;
    // States
    bool is_activated = 11;
    bool is_verified = 12;
    bool is_banned = 13;
    bool is_admin = 14;
}


service AddressService {
    rpc CreateAddress (AddressCreate) returns (AddressMinimal);
    rpc GetUserAddresses (AddressGet) returns (AddressList);
    rpc GetAddress (AddressGet) returns (AddressList);
    rpc UpdateAddress (AddressUpdate) returns (AddressUpdate);
    rpc DeleteAddress (AddressMinimal) returns (AddressMinimal);
}
message AddressMinimal {
    string id = 1;
    string owner_id = 2;
}

message AddressCreate {
    optional string id = 1;
    string street = 2;
    string house_number = 3;
    optional string apartment_number = 4;
    string city = 5;
    string post_code = 6;
    optional string owner_id = 7;
    optional bool is_primary = 8;
    string description = 9;
}
message AddressGet {
    optional string id = 1;
    optional string street = 2;
    optional string house_number = 3;
    optional string city = 4;
    optional string post_code = 5;
    optional bool is_primary = 6;
    optional string owner_id = 7;
}
message AddressUpdate {
    string id = 1;
    optional string street = 2;
    optional string house_number = 3;
    optional string apartment_number = 4;
    optional string city = 5;
    optional string post_code = 6;
    optional bool is_primary = 7;
    optional string owner_id = 8;
}

message AddressList {
    repeated AddressCreate addresses = 1;
}

service AnnouncementService {
    rpc GetAnnouncement (AnnouncementFull) returns (CreateAnnouncementResponse);
}

message AnnouncementFull {
    optional string id = 1;
    string author_email = 2;
    string keeper_email = 3;
    optional uint32 keeper_profit = 4;
    optional bool is_negotiable = 5;
    optional bool is_long_term = 6;
    optional string description = 7;
    optional uint32 start_term = 8;
    optional uint32 end_term = 9;
    optional uint32 created_date = 10;
    optional uint32 finished_date = 11;
    optional string status = 12;
    optional string address_street = 13;
    optional string address_house_number = 14;
    optional string address_city = 15;
    optional string address_post_code = 16;
}
message CreateAnnouncementResponse {
    string id = 1;
}
